--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,10 @@
     --bg-color: #081b29;
     --second-bg-color: #112e42;
     --text-color: #ededed;
-    --main-color: #00abf0;
+    --text-color-alpha: #ffffffd8;
+    --main-color: #d1ae3a;  /*#d3b962; */
+    /* 00abf0 */
+
 }
 
 html {
@@ -87,7 +90,7 @@ section {
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('/image/') no-repeat; /*adicionar foto*/
+    background: url('../image/Tela-Background-portifolio2.png') no-repeat; /*adicionar foto*/
     background-size: cover;
     background-position: center;
 }
@@ -104,7 +107,6 @@ section {
     font-weight: 700;
     line-height: 1.3;
 }
-
 
 .home-content .texto-animado {
     position: relative;
@@ -159,11 +161,11 @@ section {
     width: 15rem;
     height: 100%;
     background: var(--main-color);
-    border: .2rem solid var(--main-color);
+    border: .233rem solid var(--main-color);
     border-radius: .625rem;
     font-size: 1.42rem;
     font-weight: 600;
-    letter-spacing: .1rem;
+    letter-spacing: .04rem;
     color: var(--bg-color);
     z-index: 1;
     overflow: hidden;
@@ -184,7 +186,7 @@ section {
 }
 
 .btn-box .btn:nth-child(2)::before {
-    background: var(--main-color);
+    background: var(--main-color);  
 }
 
 .btn-box .btn::before {
@@ -227,10 +229,10 @@ section {
     overflow: hidden;
     transition: .5s;
 }
+
 .home-sci a:hover {
     color: var(--bg-color);
 }
-
 
 .home-sci a::before {
     content: '';
@@ -339,7 +341,7 @@ span {
 }
 
 .certificacao {
-   display: flex; 
+   display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
@@ -525,11 +527,11 @@ span {
 }
 
 .skills-column:nth-child(1) .skills-content .level:nth-child(6) .bar span {
-    width: 50%;
+    width: 40%;
 }
 
 .skills-column:nth-child(1) .skills-content .level:nth-child(7) .bar span {
-    width: 40%;
+    width: 30%;
 }
 
 .skills-column:nth-child(1) .skills-content .level:nth-child(8) .bar span {
@@ -547,11 +549,11 @@ span {
 }
 
 .skills-column:nth-child(2) .skills-content .level:nth-child(3) .bar span {
-    width: 50%;
+    width: 40%;
 }
 
 .skills-column:nth-child(2) .skills-content .level:nth-child(4) .bar span {
-    width: 50%;
+    width: 30%;
 }
 
 .skills-column:nth-child(2) .skills-content .level:nth-child(5) .bar span {
@@ -562,82 +564,227 @@ span {
     width: 60%;
 }
 
+/* contatos  */
+
 .contatos {
     min-height: auto;
     padding-bottom: 7rem;
 }
 
-.contatos form {
-    max-width: 70rem;
-    margin: 0 auto;
-    text-align: center;
+button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    height: 100%;
 }
 
-.contatos form .input-box {
-    position: relative;
+div.copy{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10rem 0 14rem 0;
+
+}
+.copy {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   min-height: auto;
+   padding-bottom: 5rem;
+   gap: 3rem;
+   
+}
+
+.cWhat {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    gap: 1rem;
 }
 
-.contatos form .input-box .input-field {
+.cMail {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.contatos-sci {
+    display: flex;
+    bottom: 3rem;
+    width: 10.625rem;
+    justify-content: space-between;
+}
+
+.contatos-sci a {
+    display: inline-flex;
     position: relative;
-    width: 49%;
-    margin: .8rem 0;
-}
-
-.contatos form .input-box .input-field input,
-.contatos form .textarea-field textarea {
-    width: 100%;
-    height: 100%;
-    padding: 1.5rem;
-    font-size: 1.6rem;
-    color: var(--text-color);
+    justify-content: center;
+    align-items: center;
+    width: 2.9rem;
+    height: 2.9rem;
     background: transparent;
-    border-radius: .6rem;
-    border: .2rem solid var(--main-color);
+    border: .222rem solid var(--main-color);
+    border-radius: 50%;
+    font-size: 2rem;
+    color: var(--main-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
 }
 
-.contatos form .input-box .input-field input::placeholder,
-.contatos form .textarea-field textarea::placeholder {
-    color: var(--text-color);
+.contatos-sci a:hover {
+    color: var(--bg-color);
 }
 
-.contatos form .focus {
+.contatos-sci a::before {
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 0;
     height: 100%;
-    background: var(--second-bg-color);
-    border-radius: .6rem;
+    background: var(--main-color);
     z-index: -1;
     transition: .5s;
 }
 
-.contatos form .input-box .input-field input:focus~.focus,
-.contatos form .input-box .input-field input:valid~.focus,
-.contatos form .textarea-field textarea:focus~.focus,
-.contatos form .textarea-field textarea:valid.focus {
+.contatos-sci a:hover::before {
     width: 100%;
-
 }
 
-.contatos form .textarea-field {
-    position: relative;
-    margin: .8rem 0 2.7rem;
+i.fa.fa-whatsapp{
     display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.2rem;
+    color: var(--main-color);
+    z-index: 1;
 }
 
-.contatos form .textarea-field textarea {
-    resize: none;
+.bxs-envelope {
+    font-size: 2.2rem;
+    color: var(--main-color);
+    z-index: 1;
 }
 
-.contatos form .btn-box.btns .btn {
-    cursor: pointer;
+#myWhatsapp {
+    text-align: center;
+    width: 26rem;
+    height: 3rem;
+    background: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 5px;
+    font-size: 1.7rem;
+    color: var(--text-color-alpha)
 }
 
-/* footer  */
+#myeMail {
+    text-align: center;
+    width: 26rem;
+    height: 3rem;
+    background: transparent;
+    border: .2rem solid var(--main-color);
+    border-radius: 5px;
+    font-size: 1.7rem;
+    color: var(--text-color-alpha);
+}
+
+.bx-copy-alt {
+
+    text-align: center;
+    width: 4rem;
+    height: 2.8rem;
+    background: var(--second-bg-color);
+    border: .2rem solid var(--main-color);
+    font-size: 1.3rem;
+    color: var(--main-color);
+}
+
+i.bx.bx-copy-alt {
+    border-radius: 4px;
+    font-family: "poppins";
+    text-align: center;
+
+}
+
+
+i.bx.bx-copy-alt::before {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    height: 100%;
+
+}
+
+i.bx.bxl-whatsapp {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+i.bx.bxl-whatsapp::before {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+i.bx.bxs-envelope {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.yooltip {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+/* --- */
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+  }
+
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 140px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -75px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
+
+/* -------------------footer ---------------- */
 
 .footer {
     display: flex;
@@ -778,9 +925,9 @@ span {
         z-index: -1;
         transition: .24s ease;
         transition-delay: 0s;
-        
+
     }
-    
+
     .navbar.ativado .ativado-nav {
         left: 0;
         transition-delay: .24s;
@@ -882,7 +1029,7 @@ span {
     }
 }
 
- @keyframes homeCursorText { 
+ @keyframes homeCursorText {
     0%,
     10%,
     100% {
@@ -900,7 +1047,7 @@ span {
     81% {
         opacity: 0;
     }
-} 
+}
 
 /* keyframe rotação borda sobre */
 
@@ -915,7 +1062,3 @@ span {
         width: 0;
     }
 }
-
-    
-
-/*continuar do 1h 42min 24seg - https://www.youtube.com/watch?v=sQoiM7i5Nqc&list=PLIcmIvdx2H7mUdc8fneilIUrB3-f0k9X0&index=3&t=1030s */
