--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,11 @@ a {
     align-items: center;
     text-align: center;
     text-decoration: none; 
+    font-size: 0.95em;
 }
 
 #change-language img {
-    width: 45px; 
+    width: 4.3em; 
     height: auto;
 }
 
