--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,45 @@ span {
     animation: sobreSpinner 8s linear infinite;
 }
 
+/* Estilos do modal */
+.modal {
+    display: none; /* Esconder o modal por padrão */
+    position: fixed; /* Fixo na tela */
+    z-index: 1; /* Fica acima de outros elementos */
+    left: 0;
+    top: 0;
+    width: 100%; /* Largura total */
+    height: 100%; /* Altura total */
+    overflow: auto; /* Adiciona rolagem se necessário */
+    background-color: rgba(8, 27, 41, 0.9); /* Fundo semi-transparente */
+}
+
+.modal-content {
+    background-color: var(--second-bg-color); /* Fundo do modal */
+    margin: 14% auto; /* Margem do modal */
+    padding: 10em;
+    border: 0.3em solid var(--main-color); /* Borda usando a cor principal */
+    width: 70%; /* Largura do modal */
+    max-height: 60%; /* Altura máxima do modal */
+    border-radius: 10px; /* Bordas arredondadas */
+    color: var(--text-color); /* Cor do texto */
+    overflow-y: auto; /* Adiciona rolagem vertical se necessário */
+}
+
+.close {
+    color: var(--text-color); /* Cor do texto do botão de fechar */
+    float: right; /* Alinha o botão de fechar à direita */
+    font-size: 3em;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: var(--main-color); /* Cor ao passar o mouse sobre o botão de fechar */
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .about-content {
     text-align: center;
 }
