feat: 🎸 cria media query para modal

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 :root {
     --bg-color: #081b29;
     --second-bg-color: #112e42;
+    --second-bg-color-transparent: #112e42b2;
     --text-color: #ededed;
     --text-color-alpha: #ffffffd8;
     --main-color: #d4af37;
@@ -351,31 +352,31 @@ span {
 
 /* Estilos do modal */
 .modal {
-    display: none; /* Esconder o modal por padrão */
-    position: fixed; /* Fixo na tela */
-    z-index: 1; /* Fica acima de outros elementos */
+    display: none; 
+    position: fixed; 
+    z-index: 100; 
     left: 0;
     top: 0;
-    width: 100%; /* Largura total */
-    height: 100%; /* Altura total */
-    overflow: auto; /* Adiciona rolagem se necessário */
-    background-color: rgba(8, 27, 41, 0.9); /* Fundo semi-transparente */
+    width: 100%; 
+    height: 100%; 
+    /* overflow: auto; Adiciona rolagem se necessário */
+    background-color: rgba(8, 27, 41, 0.9); 
 }
 
 .modal-content {
-    background-color: var(--second-bg-color); /* Fundo do modal */
-    margin: 14% auto; /* Margem do modal */
+    background-color: var(--second-bg-color-transparent); 
+    margin: 14% auto; 
     padding: 10em;
-    border: 0.3em solid var(--main-color); /* Borda usando a cor principal */
+    border: 0.3em solid var(--main-color); 
     width: 70%; /* Largura do modal */
     max-height: 60%; /* Altura máxima do modal */
-    border-radius: 10px; /* Bordas arredondadas */
-    color: var(--text-color); /* Cor do texto */
+    border-radius: 10px; 
+    color: var(--text-color); 
     overflow-y: auto; /* Adiciona rolagem vertical se necessário */
 }
 
 .close {
-    color: var(--text-color); /* Cor do texto do botão de fechar */
+    color: var(--text-color);
     float: right; /* Alinha o botão de fechar à direita */
     font-size: 3em;
     font-weight: bold;
@@ -383,7 +384,7 @@ span {
 
 .close:hover,
 .close:focus {
-    color: var(--main-color); /* Cor ao passar o mouse sobre o botão de fechar */
+    color: var(--main-color); 
     text-decoration: none;
     cursor: pointer;
 }
@@ -1018,6 +1019,17 @@ div.yooltip {
     .footer {
         padding: 2rem 4%;
     }
+
+    .modal-content {
+        width: 90%;
+        margin: 20% auto; 
+        padding: 5em; 
+        max-height: 70%; 
+    }
+
+    .close {
+        font-size: 2.5em; 
+    }
 }
 
 @media (max-width: 768px) {
@@ -1043,7 +1055,7 @@ div.yooltip {
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
         transition: .24s ease;
         transition-delay: .24s;
-        z-index: 1;
+        z-index: 10;
     }
 
     .navbar.ativado {
@@ -1089,6 +1101,17 @@ div.yooltip {
         background: var(--bg-color);
         opacity: .7;
     }
+
+    .modal-content {
+        width: 90%;
+        margin: 20% auto; 
+        padding: 5em; 
+        max-height: 70%; 
+    }
+
+    .close {
+        font-size: 2.5em; 
+    }
 }
 
 @media (max-width: 520px) {
@@ -1112,6 +1135,17 @@ div.yooltip {
     .home-sci a {
         width: 38px;
         height: 38px;
+    }
+
+    .modal-content {
+        width: 95%; 
+        margin: 25% auto; 
+        padding: 4em; 
+        max-height: 80%; 
+    }
+
+    .close {
+        font-size: 2em; 
     }
 }
 
@@ -1157,6 +1191,16 @@ div.yooltip {
 
     .home-content h1 {
         font-size: 5rem;
+    }
+
+    .modal-content {
+        width: 100%; 
+        margin: 30% auto; 
+        max-height: 90%; 
+    }
+
+    .close {
+        font-size: 1.8em; 
     }
 }
 
