--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,25 @@ a {
     color: #ededed;
 }
 
+ul {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0; 
+}
+
+
+li {
+    font-size: 1.4em; 
+    line-height: 1.5; 
+    margin-bottom: 0.5em; 
+}
+
+/
+ul ul {
+    margin-left: 1em; 
+}
+
+
 .container-center {
     display: flex;
     font-size: 1.8em;
